# oneplayer-rs

./: .gitignore  =p  BUG_REPORT.md  Cargo.toml  INSTALL.md  Makefile  README.md  config.example.toml
crates/app/: Cargo.toml
crates/app/src/: app.rs  logging.rs  main.rs  sample.rs  settings_ui.rs  windows_power.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  settings.rs  timing_log.rs  tracking.rs
crates/core/src/cache/: cleanup.rs  fsutil.rs  mod.rs
crates/core/src/clock/: mock.rs  mod.rs  signage.rs  sntp.rs
crates/core/src/cms/: dto.rs  mod.rs
crates/core/src/engine/: mod.rs  playback.rs  playback_log.rs  state.rs  sync.rs
crates/core/src/timeline/: builder.rs  mod.rs  models.rs
crates/core/tests/: cache_integration.rs  timeline_golden.rs
crates/core/tests/fixtures/: play_data_golden.json
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/render/src/compositor/: gpu.rs  mod.rs  shader.wgsl
crates/render/src/image/: mod.rs
crates/render/src/layout/: mod.rs
crates/render/src/scene/: mod.rs
crates/render/src/text/: mod.rs
crates/render/src/video/: mod.rs
docs/: 1.1.0_NEW_FEATURES.md  EMPS-CMS_API_연동_규격서_20260720.md  LOGGING.md  RTB.md  SCHEDULE_API_PROPOSAL.md  TRACKING_URL.md
docs/api/: play_data_v1.1.0.example.json  play_data_v1.1.0.md
scripts/: package.sh
