[workspace]
resolver = "2"
members = ["crates/core", "crates/render", "crates/app"]

# 배포용 릴리즈 빌드 최적화 (단일 .exe, LTO).
[profile.release]
lto = true
codegen-units = 1

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["OnePlayer"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "6"
image = "0.25"
pollster = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wgpu = "24"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
