[package]
name = "oneplayer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "OnePlayerWin"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
oneplayer-core = { path = "../core" }
oneplayer-render = { path = "../render" }
pollster.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Power", "Win32_Foundation"] }
