[package]
name = "oneplayer-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dirs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
urlencoding = "2"
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
chrono.workspace = true
